Make region and searchType parameters optional
